--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
     android:id="@+id/editText"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:hint="Digite aqui o seu nome"
+    android:hint="Digite aqui o seu nome, seu sambanga!"
     />
 
 
